--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,11 @@
     --color-primary: #966FDB;
     --color-bg: #f2f5f8;
     --color-border: #ececec;
+
+    --fw-normal: 400;
+    --fw-bold: 500;
+
+    --container-width: 700px;
 }
 
 html {
@@ -12,7 +17,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-size: 1.4rem;
     line-height: 1.4;
-    font-weight: 300;
+    font-weight: var(--fw-normal);
     background-color: var(--color-bg);
     color: rgb(90,90,90);
 }
@@ -21,7 +26,7 @@ body {
 
 h2 {
     color: #000;
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     font-size: 1.8rem;
     margin-bottom: 10px;
     position: relative;
@@ -30,7 +35,7 @@ h2 {
 
 h3 {
     color: #000;
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     font-size: 1.5rem;
     position: relative;
     display: inline-block;
@@ -58,7 +63,7 @@ code {
 
 .container {
     width: 90%;
-    max-width: 900px;
+    max-width: var(--container-width);
     margin-right: auto;
     margin-left: auto;
 }
@@ -121,7 +126,7 @@ p img {
 
 table {
     width: 100%;
-    max-width: 900px;
+    max-width: var(--container-width);
     margin-right: auto;
     margin-left: auto;
 
@@ -132,7 +137,7 @@ table {
 
 table thead {
     border-top: 1px solid var(--color-border);
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     color: #000;
 }
 
@@ -159,12 +164,6 @@ table td:last-of-type {
     padding-right: 20px;
 }
 
-table tr.footer {
-    background-color: var(--color-bg);
-    font-weight: 400;
-    color: #000;
-}
-
 /* Form */
 
 form {
@@ -173,14 +172,13 @@ form {
 
 form label {
     display: block;
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     margin-bottom: 0.5em;
 }
 
 form input,
 form button {
     height: 40px;
-    font-weight: 300;
     padding: 0 1em;
     border-radius: 5px;
 }
@@ -188,13 +186,14 @@ form button {
 form input {
     border: 1px solid var(--color-border);
     background-color: var(--color-bg);
+    font-weight: var(--fw-normal);
 }
 
 form button {
     border: 1px solid var(--color-primary);
     background-color: #fff;
     color: var(--color-primary);
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     cursor: pointer;
 }
 
@@ -207,7 +206,7 @@ details {
 
 details summary {
     margin-bottom: 1em;
-    font-weight: 400;
+    font-weight: var(--fw-bold);
     cursor: pointer;
 }
 
