--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,15 +75,6 @@ code {
     padding: 20px;
 }
 
-.card header {
-    /* border-bottom: 1px solid var(--color-border); */
-    padding: 20px;
-}
-
-.card .body {
-    padding: 10px 20px;
-}
-
 #site-header {
     border-bottom: 1px solid var(--color-border);
     padding: 20px 0;
@@ -151,7 +142,7 @@ table td {
 
 table th,
 table td {
-    padding: 10px;
+    padding: 20px 10px;
 }
 
 table th:first-of-type,
@@ -162,6 +153,14 @@ table td:first-of-type {
 table th:last-of-type,
 table td:last-of-type {
     padding-right: 20px;
+}
+
+@media (max-width: 600px) {
+
+    .column-cost {
+        display: none;
+    }
+
 }
 
 /* Form */
