--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
 
+    <link rel="manifest" href="/manifest.json">
+
     <meta name="color-scheme" content="light dark">
     <link rel="icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="192x192" href="/images/icon-192.png">
