--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Recurring Buy</title>
+    <title>BuyCoins Recurring Buy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,9 +21,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/images/icon-152.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Recurring Buy">
+    <meta name="apple-mobile-web-app-title" content="BuyCoins Recurring Buy">
 
-    <meta property="og:title" content="Recurring Buy">
+    <meta property="og:title" content="BuyCoins Recurring Buy">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/icon-512.png">
