--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Setup | Recurring Buy</title>
+    <title>Setup | BuyCoins Recurring Buy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,9 +21,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/images/icon-152.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Recurring Buy">
+    <meta name="apple-mobile-web-app-title" content="BuyCoins Recurring Buy">
 
-    <meta property="og:title" content="Recurring Buy">
+    <meta property="og:title" content="BuyCoins Recurring Buy">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/icon-512.png">
@@ -46,6 +46,7 @@
         <section class="card">
             <h2>What is this?</h2>
             <p>This is an open-source project which you can use to spread your investment in Bitcoin over a period of time. Make automated purchases of Bitcoin daily, weekly, or monthly!</p>
+            <p><a href="https://en.wikipedia.org/wiki/Dollar_cost_averaging">Dollar cost averaging (DCA)</a> is an investment strategy that aims to reduce the impact of volatility on large purchases of financial assets such as equities. By dividing the total sum to be invested in the market (e.g., ₦100,000) into equal amounts put into the market at regular intervals (e.g., ₦1,000 per week over 100 weeks), DCA seeks to reduce the risk of incurring a substantial loss resulting from investing the entire lump sum just before a fall in the market.</p>
         </section>
 
         <section class="card">
@@ -54,6 +55,7 @@
                 <li>A <a href="https://buycoins.africa/">BuyCoins</a> account, with access to the API (see below)</li>
                 <li>A <a href="https://heroku.com">Heroku</a> account</li>
                 <li>A <a href="https://fauna.com">Fauna DB</a> account</li>
+                <li>Basic knwoledge of how to use these tools</li>
             </ul>
         </section>
 
