--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -87,19 +87,20 @@
                     <p>
                         <code>BUY_FREQUENCY</code><br>
                         <ul>
-                            <li><em>DAILY</em> - if you want to buy every day</li>
-                            <li><em>WEEKLY_[1-7]</em> - if you want to buy once a week. e.g. WEEKLY_1 to buy every Monday</li>
-                            <li><em>MONTHLY_[1-29]</em> - if you want to buy once a month. e.g. MONTHLY_5 to buy on the 5th day of each month</li>
+                            <li><code>DAILY</code> - if you want to buy every day</li>
+                            <li><strong>WEEKLY_[1-7]</strong> - if you want to buy once a week. e.g. <code>WEEKLY_1</code> to buy every Monday</li>
+                            <li><strong>MONTHLY_[1-29]</strong> - if you want to buy once a month. e.g. <code>MONTHLY_5</code> to buy on the 5th day of each month</li>
                         </ul>
                     </p>
                     <br>
                     <p>
                         <code>BUY_AMOUNT</code><br>
-                        The amount (in Naira) you want to purchase each time.
+                        The amount (in Naira) you want to purchase at each frequency.
                     </p>
                     <br>
+                    <br>
                     <h3>Need help?</h3>
-                    <p>If you need help choosing, use this form to enter how much you want to spend each month: </p>
+                    <p>If you need help choosing, use the form below. </p>
 
                     <form action="/setup#form" id="form" method="post">
                         <label for="monthly_spend">How much do you want to spend (in Naira) each month?</label>
