--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,17 +28,13 @@ h2 {
     color: #000;
     font-weight: var(--fw-bold);
     font-size: 1.8rem;
-    margin-bottom: 10px;
-    position: relative;
-    display: inline-block;
+    margin-bottom: 1em;
 }
 
 h3 {
     color: #000;
     font-weight: var(--fw-bold);
     font-size: 1.5rem;
-    position: relative;
-    display: inline-block;
 }
 
 p {
