--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -65,7 +65,7 @@
             <details open>
                 <summary>1. Get access to the BuyCoins API</summary>
                 <div>
-                    <p>You'll need access to the <a href="http://developers.buycoins.africa/">BuyCoins API</a> in order to make automatic purchases. To apply for access, send an email to <a href="mailto:support@buycoins.africa">support@buycoins.africa</a>.</p>
+                    <p>You'll need access to the <a href="http://developers.buycoins.africa/">BuyCoins API</a> in order to make automatic purchases. To apply for access, send an email to <a href="mailto:support@buycoins.africa">support@buycoins.africa</a> with the email address attached to your BuyCoins and a link to this project.</p>
                     <p>Once you have access, go to your <a href="https://buycoins.africa/settings/api">API Settings</a> page. Generate and copy your public and secret keys. These keys will be used as the <code>BUYCOINS_API_PUBLIC</code> and <code>BUYCOINS_API_SECRET</code> environment variables on Heroku.</p>
                 </div>
             </details>
