--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,56 +34,81 @@
 <body>
     <header id="site-header">
         <div class="container">
-            <h1>
-                <a href="/">
-                    <img src="/images/recurring.svg" class="logo" alt="">
-                </a>
-            </h1>
-            <a href="/setup">About/Setup</a>
+            <img src="/images/recurring.svg" class="logo" alt="BuyCoins Recurring Buy">
+            <a href="https://github.com/buycoinsafrica/recurring-buy/blob/master/README.md">About/Setup</a>
         </div>
     </header>
 
-    <main class="container">
+    <main>
 
-        <section class="card">
-            <h2>Summary</h2>
-            <p>Frequency: <strong><%= CONFIG.FREQUENCY %></strong></p>
-            <p>Amount: <strong>₦<%= CONFIG.AMOUNT %> worth of Bitcoin</strong></p>
-            <br>
-            <p>Total Bought: <%= totalAmount %> BTC</p>
-            <p>Total Spent: ₦<%= totalCost %></p>
-            <p>Average Price: ₦<%= avergaePrice %> /BTC</p>
-            <p>Times Bought: <%= summaries.length %></p>
-        </section>
+        <div class="container">
+            <section class="callout">
+                <h1><%= totalAmount %> BTC</h1>
+                <br>
+                <ul>
+                    <li>
+                        <span>Buy Frequency:</span>
+                        <span><%= CONFIG.FREQUENCY %></span>  
+                    </li>
+                    <li>
+                        <span>Buy Amount:</span>
+                        <span>₦<%= CONFIG.AMOUNT %> worth of BTC</span>  
+                    </li>
+                </ul>
+                <br>
+                <ul>
+                    <li>
+                        <span>Total Bought:</span>
+                        <span><%= totalAmount %> BTC</span>  
+                    </li>
+                    <li>
+                        <span>Total Spent:</span>
+                        <span>₦<%= totalCost %></span>  
+                    </li>
+                    <li>
+                        <span>Average Price:</span>
+                        <span>₦<%= avergaePrice %> /BTC</span>  
+                    </li>
+                    <li>
+                        <span>Times Bought:</span>
+                        <span><%= summaries.length %></span>  
+                    </li>
+                </ul>
+            </section>
+        </div>
+
+        
 
         <% if (summaries.length > 0) { %>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>BTC Bought</th>
-                        <th class="column-cost">Cost</th>
-                        <th>Price per BTC</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% summaries.forEach(function(summary) { %>
-                        <% if (summary.amount) { %>
-                            <tr>
-                                <td><%= summary.date %></td>
-                                <td><%= summary.amount || '' %></td>
-                                <td class="column-cost"><%= summary.cost ? '₦' + summary.cost : '' %></td>
-                                <td><%= summary.price || '' %></td>
-                            </tr>
-                        <% } else if (summary.error) { %>
-                            <tr>
-                                <td><%= summary.date %></td>
-                                <td colspan="3"><%= summary.error %></td>
-                            </tr>
-                        <% } %>
-                    <% }); %>
-                </tbody>
-            </table>
+            <div class="container-fw">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>BTC Bought</th>
+                            <th class="column-cost">Cost</th>
+                            <th>Price per BTC</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% summaries.forEach(function(summary) { %>
+                            <% if (summary.amount) { %>
+                                <tr>
+                                    <td><%= summary.date %></td>
+                                    <td><%= summary.amount || '' %></td>
+                                    <td class="column-cost"><%= summary.cost ? '₦' + summary.cost : '' %></td>
+                                    <td><%= '₦' + summary.price || '' %></td>
+                                </tr>
+                            <% } else if (summary.error) { %>
+                                <tr>
+                                    <td><%= summary.date %></td>
+                                    <td colspan="3"><%= summary.error %></td>
+                                </tr>
+                            <% } %>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
         <% } %>
     </main>
 
