--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ body {
 /* Typography */
 
 h1 {
-    color: #fff;
+    color: #000;
     font-weight: var(--fw-bold);
     font-size: 2.2rem;
 }
@@ -98,7 +98,7 @@ code {
     text-align: center;
 }
 
-.callout h2 {
+.callout h1 {
     color: #fff;
 }
 
