--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/images/icon-152.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="BuyCoins Recurring Buy">
 
     <meta property="og:title" content="BuyCoins Recurring Buy">
