--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,30 +47,30 @@
                 <br>
                 <ul>
                     <li>
-                        <span>Buy Frequency:</span>
+                        <span>Buy Frequency</span>
                         <span><%= CONFIG.FREQUENCY %></span>  
                     </li>
                     <li>
-                        <span>Buy Amount:</span>
+                        <span>Buy Amount</span>
                         <span>₦<%= CONFIG.AMOUNT %> worth of BTC</span>  
                     </li>
                 </ul>
                 <br>
                 <ul>
                     <li>
-                        <span>Total Bought:</span>
+                        <span>Total Bought</span>
                         <span><%= totalAmount %> BTC</span>  
                     </li>
                     <li>
-                        <span>Total Spent:</span>
+                        <span>Total Spent</span>
                         <span>₦<%= totalCost %></span>  
                     </li>
                     <li>
-                        <span>Average Price:</span>
+                        <span>Average Price</span>
                         <span>₦<%= avergaePrice %> /BTC</span>  
                     </li>
                     <li>
-                        <span>Times Bought:</span>
+                        <span>Times Bought</span>
                         <span><%= summaries.length %></span>  
                     </li>
                 </ul>
