--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
                     </li>
                     <li>
                         <span>Times Bought</span>
-                        <span><%= summaries.length %></span>  
+                        <span><%= timesBought %></span>  
                     </li>
                 </ul>
             </section>
